[package]
name = "dirt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
thiserror = "2"
socket2 = "0.5.8"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
raft = { version =  "0.7.0", default-features = false, features = ["prost-codec", "default-logger"] }
# console-subscriber = "0.4.1"
